--- a/jsocial-backend/src/main/resources/application.properties
+++ b/jsocial-backend/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.datasource.password= pass
 
 server.port = 9000
 
+#Logging
 logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=INFO
